--- a/src/components/Announcements.css
+++ b/src/components/Announcements.css
@@ -12,6 +12,8 @@
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .ticker-content {
